--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,10 @@
 
 <body>
   <main>
-    <h1>Vanilla JavaScript App</h1>
+    <h1>Patient Portal</h1>
+    <p>The website is under planned maintenance.</p>
+    <p>Stay tuned for something amazing. We are working hard to give you the best experience.</p>
+    <p>--The Kenobi Team</p>
   </main>
 </body>
 
